# SiliconPlayer

./: .gitignore  .gitmodules  README.md  pubspec.yaml
.github/workflows/: android-optimized-debug.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioEngineCoreOptions.cpp  AudioEngineEffects.cpp  AudioEngineMetadata.cpp  AudioEnginePipeline.cpp  AudioEngineRender.cpp  AudioEngineStream.cpp  AudioEngineTransport.cpp  AudioTrackJniBridge.cpp  AudioTrackJniBridge.h  CMakeLists.txt  ChannelScopeSharedState.cpp  ChannelScopeSharedState.h  ChannelScopeTrigger.cpp  ChannelScopeTrigger.h  SiliconPlayerNative.cpp
android/app/src/main/cpp/decoders/: AdPlugDecoder.h  CPConvStub.c  CRSIDDecoder.cpp  CRSIDDecoder.h  DecoderRegistry.cpp  FFmpegDecoder.cpp  FFmpegDecoderPlugin.cpp  GmeDecoder.cpp  GmeDecoderPlugin.cpp  HivelyTrackerDecoderPlugin.cpp  KlystrackDecoder.cpp  KlystrackDecoder.h  KlystrackDecoderPlugin.cpp  LazyUsf2Decoder.cpp  LazyUsf2Decoder.h  LibOpenMPTDecoder.h  LibOpenMPTDecoderPlugin.cpp  LibSidPlayFpDecoder.cpp  LibSidPlayFpDecoder.h  Sc68Decoder.h  SdlCompat.c  SidMetadataProvider.h  UadeDecoder.h  VGMDecoder.cpp  VGMDecoder.h  Vio2sfDecoder.cpp
android/app/src/main/cpp/decoders/sid/: ReSidBuilder.cpp  ReSidBuilder.h  ReSidEmu.cpp  ReSidEmu.h
android/app/src/main/cpp/effects/openmpt_dsp/: OpenMptDspEffects.cpp  OpenMptDspEffects.h  README.md
android/app/src/main/java/com/flopster101/siliconplayer/: AdPlugConfig.kt  AppConstants.kt  AppDefaults.kt  ArtworkLoader.kt  AudioTrackOutputBackend.kt  BrowserLaunchState.kt  BrowserListingAdapters.kt  BrowserLocationModel.kt  BrowserLocationPersistence.kt  BrowserLocationRouting.kt  BrowserNameSortMode.kt  ChannelScopeVisibleElements.kt  CoreCapabilities.kt  CoreSettings.kt  CrsidConfig.kt  DecoderArtworkHints.kt  DecoderNames.kt  FfmpegConfig.kt  FileExtensionHeuristics.kt  FilePreviewSupport.kt  FurnaceConfig.kt  GmeConfig.kt  HivelyTrackerConfig.kt  KlystrackConfig.kt  LazyUsf2Config.kt  MainActivity.kt.txt  NativeBridge.kt  PlaybackCapabilities.kt  PlaybackService.kt  PlayerOrchestration.kt  PlaylistStore.kt  PlaylistSupport.kt  ProgressiveRandomAccessCache.kt  RecentArtworkCacheSupport.kt  RepeatMode.kt  Sc68Config.kt  SidPlayFpConfig.kt  SmbAvioBridge.kt  SmbProgressiveRandomAccessTransport.kt  SourceCacheSupport.kt  (+7 more)
android/app/src/main/java/com/flopster101/siliconplayer/activity/: IntentFileOpenSupport.kt  IntentSignals.kt
android/app/src/main/java/com/flopster101/siliconplayer/data/: ArchiveSupport.kt  FileItem.kt  FileRepository.kt
android/app/src/main/java/com/flopster101/siliconplayer/network/: HttpBrowserSupport.kt  HttpSourceSupport.kt  NetworkCredentialStore.kt  NetworkMetadataBackfill.kt  NetworkSourcesStore.kt  SmbBrowserSupport.kt  SmbClientSupport.kt  (+1 more)
android/app/src/main/kotlin/com/flopster101/siliconplayer/: MainActivity.kt
android/app/src/main/res/drawable/: ic_airwave.xml  ic_file_game.xml  ic_file_tracked.xml  ic_file_unsupported.xml  ic_folder_zip.xml  ic_launcher_background.xml  ic_notification_action_repeat.xml  ic_notification_action_stop.xml  ic_notification_small.xml  ic_placeholder_gamepad.xml  ic_placeholder_music_note.xml  ic_placeholder_tracker_chip.xml  ic_settings_applications.xml  ic_star_filled.xml  ic_star_outline.xml
android/app/src/main/res/drawable-v24/: about_app_icon_color.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-v31/: themes.xml
android/app/src/main/res/xml/: file_provider_paths.xml
android/app/src/test/java/com/flopster101/siliconplayer/: PlaybackUiSupportTest.kt  RepeatModeTest.kt
android/gradle/: libs.versions.toml
app/: build.gradle.kts
app/src/main/cpp/: AudioEngine.h  AudioEngineEffects.cpp  AudioEngineMetadata.cpp  AudioEngineRender.cpp  AudioEngineStream.cpp  AudioEngineTransport.cpp  CMakeLists.txt  SiliconPlayerNative.cpp
app/src/main/cpp/decoders/: AdPlugDecoder.cpp  AdPlugDecoder.h  AdPlugDecoderPlugin.cpp  AudioDecoder.h  CRSIDDecoderPlugin.cpp  DecoderPluginLoader.cpp  DecoderPluginLoader.h  DecoderRegistry.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FurnaceDecoder.cpp  FurnaceDecoder.h  FurnaceDecoderPlugin.cpp  GmeDecoder.cpp  GmeDecoder.h  HivelyTrackerDecoder.cpp  HivelyTrackerDecoder.h  LazyUsf2DecoderPlugin.cpp  LibOpenMPTDecoder.cpp  LibSidPlayFpDecoderPlugin.cpp  Sc68Decoder.cpp  Sc68DecoderPlugin.cpp  UadeDecoder.cpp  UadeDecoderPlugin.cpp  UadeExtensions.h  VGMDecoder.cpp  VGMDecoder.h  VGMDecoderPlugin.cpp  Vio2sfDecoder.h  Vio2sfDecoderPlugin.cpp
app/src/main/java/com/flopster101/siliconplayer/: AppConstants.kt  MainActivity.kt  MiniPlayerUi.kt  NativeBridge.kt  PlaybackService.kt  PlayerOrchestration.kt  PlaylistStore.kt  PlaylistSupport.kt
app/src/main/java/com/flopster101/siliconplayer/navigation/: AppNavigationPlaybackPollEffects.kt
app/src/main/java/com/flopster101/siliconplayer/playback/: AppNavigationPlaybackLogic.kt  AppNavigationPlaybackStateDelegates.kt  AppNavigationPlayerOverlaysSection.kt  AppNavigationTrackStateActions.kt  ExpandedPlayerOverlayHost.kt  PlaybackDialogsWiring.kt  PlaybackUiSupport.kt
lib/: file_browser_screen.dart  file_extension_heuristics.dart  main.dart  visualizer_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
shared-core/src/commonMain/kotlin/com/flopster101/siliconplayer/: M3uPlaylistParser.kt  PlaybackModels.kt  PlaybackStateLogic.kt  PlaylistLibraryMutations.kt  PlaylistModels.kt  PreviousTrackNavigation.kt
shared-core/src/commonTest/kotlin/com/flopster101/siliconplayer/: M3uPlaylistParserTest.kt  PlaybackStateLogicTest.kt  PlaylistLibraryMutationsTest.kt  PreviousTrackNavigationTest.kt
shared-core/src/desktopMain/kotlin/com/flopster101/siliconplayer/: PlaylistPlatform.kt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+19 files in other folders)
